services/wallet/k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet
  namespace: tellawl
  labels:
    app: wallet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wallet
  template:
    metadata:
      labels:
        app: wallet
    spec:
      containers:
        - name: wallet
          image: lopesgabriel/wallet:1.0.0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"

---

apiVersion: v1
kind: Service
metadata:
  name: wallet
  namespace: tellawl
  labels:
    app: wallet
spec:
  type: ClusterIP
  selector:
    app: wallet
  ports:
    - name: http
      port: 8080
      targetPort: 8080
